commit a su version mas reciente

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
             TITULO
         </h1>
     </header>
-    <p>AQUI VOY A IR PROBANDO</p>
-    <p>añadiendo otra cosa mas manito</p>
+    <nav>
+        <ol>
+            <li>Cosotas</li>
+            <li>Cositas</li>
+            <li>Inicio</li>
+            <li>Menu</li>
+        </ol>
+    </nav>
+    <section>
+        <p>AQUI VOY A IR PROBANDO</p>
+        <p>añadiendo otra cosa mas manito</p>
+    </section>
 </body>
 </html>
