--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <nav>
         <ol>
-            <li>Cosotas</li>
+            <li>AQUI IRA ALGO DISTINTO</li>
             <li>Cositas</li>
             <li>Inicio</li>
             <li>Menu</li>
