--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <ol>
             <li>AQUI IRA ALGO DISTINTO</li>
-            <li>Cositas</li>
+            <li>Cositas mas bonitas</li>
             <li>Inicio</li>
             <li>Menu</li>
         </ol>
