--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
     </header>
     <nav>
         <ol>
-            <li>Cosotas</li>
-            <li>Cositas</li>
+            <li>ALGO AUN MAS HERMOSO Y DISTINTO</li>
+            <li>ESTO DICE CONTACTANOS</li>
             <li>Inicio</li>
             <li>Menu</li>
+            <li>Otro li</li>
+            <li>mas feito</li>
         </ol>
     </nav>
     <section>
         <p>AQUI VOY A IR PROBANDO</p>
         <p>añadiendo otra cosa mas manito</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, eaque? Non maxime, adipisci praesentium nulla vel, fugit distinctio sit natus magni deserunt iusto minima, ad quisquam facilis qui magnam dolorum.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam velit, hic eos praesentium aliquam nobis, a placeat quas aperiam corporis accusantium consequatur! Sit iusto enim quia corporis molestias adipisci officiis!</p>
     </section>
 </body>
 </html>
